<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reciclar"
            android:icon="@drawable/ic_reciclar"
            android:title="Reciclar RAEEs" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_historial"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_raee"
            android:icon="@drawable/ic_raee"
            android:title="@string/menu_raee" />
        <item
            android:id="@+id/nav_porqueReci"
            android:icon="@drawable/ic_porque"
            android:title="@string/menu_porqueReci" />
        <item
            android:id="@+id/nav_planta"
            android:icon="@drawable/ic_planta"
            android:title="@string/menu_planta" />
        <item
            android:id="@+id/nav_somos"
            android:icon="@drawable/ic_somos"
            android:title="@string/menu_somos" />

    </group>

    <item android:title="Utilidades">

        <menu>
            <item
                android:id="@+id/nav_contactanos"
                android:icon="@drawable/ic_contactanos"
                android:title="@string/menu_contactanos" />
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_ajustes"
                android:title="Ajustes" />
            <item
                android:id="@+id/nav_cerrarSesion"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_cerrarSesion" />
        </menu>
    </item>

</menu>

