<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.porqueReci.PorqueReci">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        android:elevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Razones por el cual reciclar RAEE"
            android:gravity="center_horizontal"
            android:textColor="#212121"
            android:textSize="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/comic"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:text="@string/razon1"
                android:drawableLeft="@drawable/ic_tag"
                android:drawablePadding="12dp"
                android:textColor="#212121"
                android:textSize="14sp"
                android:fontFamily="@font/comic"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:text="@string/razon2"
                android:drawableLeft="@drawable/ic_tag"
                android:drawablePadding="12dp"
                android:textColor="#212121"
                android:textSize="14sp"
                android:fontFamily="@font/comic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:paddingLeft="10dp"
            android:text="@string/razon3"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="12dp"
            android:textColor="#212121"
            android:textSize="14sp"
            android:fontFamily="@font/comic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:paddingLeft="10dp"
            android:text="@string/razon4"
            android:drawableLeft="@drawable/ic_tag"
            android:drawablePadding="12dp"
            android:textColor="#212121"
            android:textSize="14sp"
            android:fontFamily="@font/comic"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ozaydin.serkan.com.image_zoom_view.ImageViewZoom
        android:id="@+id/imgBeneficio"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/beneficio"/>



</LinearLayout>