<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.planta.Planta">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        android:elevation="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿Donde llevar mis RAEE?"
            android:gravity="center_horizontal"
            android:textColor="#212121"
            android:textSize="25dp"
            android:textStyle="bold"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:text="San Antonio Recycling"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="65dp"
            android:text="@string/SAR"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:text="COIPSA"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="153dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/COIPSA"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="185dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:text="COMINTEL"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:layout_marginLeft="65dp"
            android:text="@string/COMNTEL"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:text="ASKTARCON"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="65dp"
            android:text="@string/AKS"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:text="Municipalidad de Miraflores"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="372dp"
            android:layout_marginLeft="65dp"
            android:text="@string/MIRAFLORES"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="395dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:text="Municipalidad La Molina"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="423dp"
            android:layout_marginLeft="65dp"
            android:text="@string/MOLINA"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="472dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="15dp"
                android:text="RECOLEC"
                android:drawableLeft="@drawable/ic_mapa"
                android:drawablePadding="12dp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="18sp"
                android:fontFamily="@font/comic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="502dp"
            android:layout_marginLeft="65dp"
            android:text="@string/RECOLEC"
            android:textSize="17dp"
            android:textColor="#212121"
            android:fontFamily="@font/comic"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>